--- a/Cad_VLM/config/inference_user_input.yaml
+++ b/Cad_VLM/config/inference_user_input.yaml
@@ -3,11 +3,11 @@ text_encoder:
   # ----------------- Configuration for the Base Text Embedder ----------------- #
   text_embedder:
     # Name of the text encoder model
-    model_name: "bert_large_uncased"
+    model_name: "/data2/songyuan/models/AI-ModelScope/bert-large-uncased/AI-ModelScope/bert-large-uncased"
     # Maximum Text Sequence Length
     max_seq_len: 512
     # Cache Directory
-    cache_dir: "YOUR DIR"
+    cache_dir: "/home/songyuan/disk/117/text2cad/Text2CAD/models/"
 
   # ----------------- Configuration for the Adaptive Layer ----------------- #
   adaptive_layer:
@@ -45,12 +45,12 @@ test:
   # Prefetch factor for the DataLoader during inference
   prefetch_factor: 10
   # Directory for logging inference information
-  log_dir: "YOUR DIR"
+  log_dir: "./logs/"
   # Path to saved model checkpoint (optional)
-  checkpoint_path: "YOUR CHECKPOINT PATH"
+  checkpoint_path: "/home/songyuan/disk/117/text2cad/Text2CAD/models/Text2CAD_1.0.pth"
   nucleus_prob: 0
   sampling_type: "max"
-  prompt_file: "YOUR PROMPT FILE"
+  prompt_file: "/home/songyuan/disk/117/text2cad/Text2CAD/datasets/text2cad_v1.0.csv"
 
 # ------------------------------ Debug mode flag ----------------------------- #
 debug: False
